force-app/main/default/objects/Association__c/Association__c.object-meta.xml
<CustomObject>
    <label>Association</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>