force-app/main/default/objects/Association__c/fields/Association_Name__c.field-meta.xml
<CustomField>
    <fullName>Association_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Association Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Associations (Association Name)</relationshipLabel>
    <relationshipName>Associations1</relationshipName>
    <type>Lookup</type>
</CustomField>