force-app/main/default/objects/Association__c/fields/CCS_Contact_Lead__c.field-meta.xml
<CustomField>
    <fullName>CCS_Contact_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the daily CCS contact</inlineHelpText>
    <label>CCS Contact Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Associations (CCS Contact Lead)</relationshipLabel>
    <relationshipName>Associations1</relationshipName>
    <type>Lookup</type>
</CustomField>