force-app/main/default/objects/Association__c/fields/CCS_Lead_Job_Function__c.field-meta.xml
<CustomField>
    <fullName>CCS_Lead_Job_Function__c</fullName>
    <formula>CCS_Contact_Lead__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCS Lead Job Function</label>
    <type>Text</type>
</CustomField>