force-app/main/default/objects/Association__c/fields/CCS_Other_Relationship__c.field-meta.xml
<CustomField>
    <fullName>CCS_Other_Relationship__c</fullName>
    <label>CCS Other Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>