force-app/main/default/objects/Association__c/fields/CCS_Relationship__c.field-meta.xml
<CustomField>
    <fullName>CCS_Relationship__c</fullName>
    <inlineHelpText>Please add here how CCS is affiliated with the Association</inlineHelpText>
    <label>CCS Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>