force-app/main/default/objects/Association__c/fields/Job_Function_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Function_Level__c</fullName>
    <formula>Main_Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Function Level</label>
    <type>Text</type>
</CustomField>