force-app/main/default/objects/Association__c/fields/Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the main chair / leader of the association / decision maker</inlineHelpText>
    <label>Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Associations</relationshipLabel>
    <relationshipName>Associations</relationshipName>
    <type>Lookup</type>
</CustomField>