force-app/main/default/objects/Association__c/fields/National_Scope__c.field-meta.xml
<CustomField>
    <fullName>National_Scope__c</fullName>
    <label>National Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>