force-app/main/default/objects/Association__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Associations</relationshipLabel>
    <relationshipName>Associations</relationshipName>
    <type>Lookup</type>
</CustomField>