force-app/main/default/objects/Association__c/fields/Organisation_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Objectives__c</fullName>
    <inlineHelpText>Please detail here the key functions, priorities and purpose of the association</inlineHelpText>
    <label>Organisation Objectives</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>