force-app/main/default/objects/Association__c/fields/Other_Governance_Structure__c.field-meta.xml
<CustomField>
    <fullName>Other_Governance_Structure__c</fullName>
    <label>Other Governance Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>