force-app/main/default/objects/Association__c/fields/Other_Sectors_Involved__c.field-meta.xml
<CustomField>
    <fullName>Other_Sectors_Involved__c</fullName>
    <label>Other Sectors Involved</label>
    <length>100</length>
    <type>Text</type>
</CustomField>