force-app/main/default/objects/Association__c/fields/Primary_Region__c.field-meta.xml
<CustomField>
    <fullName>Primary_Region__c</fullName>
    <inlineHelpText>Main region in which the association is based / operated within</inlineHelpText>
    <label>Primary Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North West</fullName>
            </value>
            <value>
                <fullName>Yorkshire &amp; Humber</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>East Midlands</fullName>
            </value>
            <value>
                <fullName>West Midlands</fullName>
            </value>
            <value>
                <fullName>East of England</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>etc</fullName>
                <isActive>false</isActive>
                <label>etc</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>