force-app/main/default/objects/Association__c/fields/Primary_Sectors__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sectors__c</fullName>
    <label>Primary Sectors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Local Authority</fullName>
            </value>
            <value>
                <fullName>Central Gov</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Not for Profit</fullName>
            </value>
            <value>
                <fullName>Charities</fullName>
            </value>
            <value>
                <fullName>Housing Associations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>