force-app/main/default/objects/Association__c/fields/Type_of_Governance_Structure__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Governance_Structure__c</fullName>
    <inlineHelpText>Please detail here the function of the association</inlineHelpText>
    <label>Type of Governance Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trading Company</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Joint Venture</fullName>
            </value>
            <value>
                <fullName>Contracting Authority</fullName>
            </value>
            <value>
                <fullName>Professional membership organisation</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Regional Network</fullName>
            </value>
            <value>
                <fullName>Wholly Owned Subsidiary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Local Authority</fullName>
                <isActive>false</isActive>
                <label>Local Authority</label>
            </value>
            <value>
                <fullName>etc</fullName>
                <isActive>false</isActive>
                <label>etc</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>