force-app/main/default/objects/Association__c/validationRules/TypeOfGovernanceSt_Other_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>TypeOfGovernanceSt_Other_is_Mandatory</fullName>
    <active>true</active>
    <description>When Type Of Governance Structure is Other, the Other Governance Structure field is made mandatory.</description>
    <errorConditionFormula>AND(ISBLANK(Other_Governance_Structure__c ), TEXT(Type_of_Governance_Structure__c) = &quot;Other&quot;)</errorConditionFormula>
    <errorDisplayField>Other_Governance_Structure__c</errorDisplayField>
    <errorMessage>You have selected Other as Type Of Governance Structure. Please complete the Other Governance Structure field.</errorMessage>
</ValidationRule>